# Dev0-AI-Powered-Modular-Development-Platform-

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.app.yml  docker-compose.infra.yml  install.bat  install.sh  migrate.bat  modules_db.json  pyproject.toml  reindex.bat  run_architect.py  run_mcp_stdio.py  run_orchestrator.py  start.bat  start.sh
docs/: 1_architecture.md  2_developer_guide.md  3_agent_workflows.md  4_typescript_contracts.md  5_decorators.md
docs/agents/: Architect.md  Engineer.md  Orchestrator.md  Planner.md  Reviewer.md  Verifier.md
nginx/: nginx.conf
project/: main.py  test_main.py
project/admin_panel/: index.html
project/api/: endpoints.py  websockets.py
project/core/: bash_runner_v1.py  knowledge_base_manager.py  module_registry.py  notebook.py  pydantic_to_json_schema.py  stitcher.py  test_utils.py  user_input_v1.py
project/memory/: embedding_manager.py  experience_manager.py  experience_recorder.py  models.py  project_notebook.py  storage_manager.py
scripts/: backup.sh  backup_qdrant.py  experience_worker.py  index_codebase.py  index_modules.py  inject_fake_event.py  inject_lesson.py  inspect_lessons.py  migrate.sh  migrate_chroma_to_qdrant.py  migrate_knowledge.py  reindex.sh  run_e2e_test.py  seed_structured_memory.py  test_mcp_client.py  test_real_infra.py  verify_providers.py
tests/: stress_weak.py  test_dependency_resolver.py  test_mcp_server.py  test_observability.py  test_qdrant_integration.py  test_rag_integration.py  test_swarm_data.py  test_vector_db_wrapper.py
tests/core/: test_stitcher.py
(+69 files in other folders)
